Calendar showing icons

--- a/src/common/config.json
+++ b/src/common/config.json
@@ -1278,7 +1278,7 @@
         ]
     },
     "events": {
-        "spring": [
+        "Spring": [
             {
                 "day": 1,
                 "name": "Darius"
